index + more innovations

--- a/www/innovationspreis.tex
+++ b/www/innovationspreis.tex
@@ -161,9 +161,7 @@ Radio the Project makes our radio service interesting to others.
 
 New technologies play a key role for Youth empowerment, they show that Ham Radio 
 isn't only an old mans hobby and they are making ham radio atractive to young people 
-who have an interest to experiment with new technical innovations. It also improves 
-the possibilitys that you have with homebrew equitment...
+who have an interest to experiment with new technical innovations. 
 
-TODO Argue Youth-Empowerment
 
 \end{document}
