--- a/www/innovationspreis.tex
+++ b/www/innovationspreis.tex
@@ -1,6 +1,11 @@
-\documentstyle{article}
+\documentclass{article}
+\usepackage{hyperref}
 
+
+\title{QTC-Net Innovations Price Applicaion}
 \begin{document}
+\maketitle
+
 
 \begin{abstract}
 What if HAM A wants to send a Message to HAM B but he does not have any 
@@ -143,7 +148,7 @@ PSK31 and CW Bots for shortwave radio access.
 
 \subsection{Age}
 
-Unfortunately the Project is a few month older than one year due to the fact
+The Project is only afew month older than one year due to the fact
 that there was no Innovation price last year. However it is still a young 
 project. I hope that the Innovations price is defines the project still as 
 new. 
@@ -161,7 +166,8 @@ Radio the Project makes our radio service interesting to others.
 
 New technologies play a key role for Youth empowerment, they show that Ham Radio 
 isn't only an old mans hobby and they are making ham radio atractive to young people 
-who have an interest to experiment with new technical innovations. 
-
+who have an interest to experiment with new technical innovations. During Talks on 
+Hacker Congresses and other Social Media events I was able to attract many young 
+people for Ham Radio and it applications. 
 
 \end{document}
